CHANGELOG

== June 7, 2012
* Fixed bug for opensearch.xml
* refractored code
* minor bug fixes

== June 3, 2012
* Oauth with Twitter
* Updated Rails to 3.2.5
* Updated gems
* Improved twitter links
* Improved Admin interface
* Fixed bug about draft items countdown
* Added RSS feed for comments

== June 1, 2012
* Several minor bug fixes
* Added a few more rspec tests

== May 30, 2012
* Added tinyMCE on comments
* Changed order on sidebar

== May 29, 2012
* Added more validation to item form
* Removed check_for_suspicious on comments
* Cleared unused Item columns
* Improved new item form
* Added 'original' checkbox to items (WIP)

== May 28, 2012
* Fix page views bug
* Fix bug for Recently Commented Articles
* Added youtube image on sidebar
* Gem update

== May 27, 2012
* Added Recently Commented Articles to sidebar
* Removed Language from Article page
* Updated Twitter Bootstrap
* Added iconification
* Reduced sidebar caching from 10 minutes to 5 minutes

== May 26, 2012
* Removed Recent comments from sidebar
* Most Read items descreased from 90 to 15 days
* Added Most Commented items in last 30 days
* Added Popular Authors (sorted my most items)
* Whole Sidebar is cached for 10 minutes
* Added default image for users without image
* Added Facebook Connect for new user registration
* Use facebook image if user does not upload image
* Sorting Categories by priority

== May 23, 2012
* Process sitemap job after creation
* Sitemap process time set for 3 minutes after published
* Email Notification to admins on User registration

== May 20, 2012
* Added 'edit' button for item on front end
* Added 'new item' for user menu on front end
* Updated Gems
* Git push hook Email API

== May 19, 2012
* Fixed Users/Admins Avatar bug
* Allow Users to upload GPG keys
* Fixed Comment notification
* Fixed Forms for Twitter-Bootstrap 2.0.7
* Unified Sidebar
* ActiveAdmin fetched upstream master (4.0.4)
* Added extra admin Links in User menu
* Updated Gems

== May 16, 2012